<resources>
    <string name="app_name">登陆者</string>

    <string name="text_account">账户</string>
    <string name="text_password">密码</string>
    <string name="text_ip">IP</string>
    <string name="text_save">自动保存</string>
    <string name="text_gb">GB</string>

    <string name="info_account">用户</string>
    <string name="info_time">截止至</string>
    <!--总流量(公网)-->
    <string name="info_total">总流量</string>
    <!--已用流量(公网)-->
    <string name="info_used">已用</string>
    <!--剩余流量(公网)-->
    <string name="info_remained">剩余</string>
    <string name="info_beyond">超出</string>
    <!--校园网已用流量-->
    <string name="info_schoolused">校园网已用</string>
    <string name="info_money">余额</string>
    <string name="info_timeout">预计下线</string>
    <string name="info_none">暂无</string>

    <string name="text_loading_login">正在登陆</string>
    <string name="text_loading_get">正在获取</string>
    <string name="text_loading_logout">正在下线</string>
    <string name="text_loading_update">正在获取版本信息</string>

    <string name="btn_text_submit">提交</string>
    <string name="btn_ok">确定</string>
    <string name="btn_ip">重新获取IP</string>
    <string name="btn_cancel">取消</string>

    <string name="action_ip">获取上次登录IP</string>
    <string name="action_settings">设置</string>
    <string name="action_increment">充值</string>

    <string name="success_login">登陆成功</string>
    <string name="success_logout">下线成功</string>
    <string name="success_last_ip">获取上次登录IP成功</string>

    <string name="error_ip">获取IP失败</string>
    <string name="error_login">登陆失败</string>
    <string name="error_logout">下线失败</string>
    <string name="error_account">获取账户信息失败</string>
    <string name="error_router">路由配置错误</string>
    <string name="error_nowifi">没有连接WiFi</string>
    <string name="error_update">服务器连接失败</string>
    <string name="msg_online">已经在线，无法获取IP</string>
    <string name="msg_open_network">请打开手机网络</string>

    <string name="increment_url">http://hn.189.cn/hnselfservice/topup/topup!topupIndex.action?isCorp=0</string>
</resources>
